--- a/project1_.ipynb
+++ b/project1_.ipynb
@@ -5,11 +5,21 @@
    "execution_count": 1,
    "id": "812376b3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\allie\\anaconda33\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.23.1\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy.stats import stats"
    ]
   },
   {
@@ -333,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3ec4e802",
    "metadata": {},
    "outputs": [
@@ -452,7 +462,7 @@
        "[610 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "4260f1f2",
    "metadata": {},
    "outputs": [
@@ -712,7 +722,7 @@
        "Ukranian        1           1"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -731,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 8,
    "id": "28a5c976",
    "metadata": {},
    "outputs": [
@@ -741,7 +751,7 @@
        "Text(0.5, 1.0, 'Languages of Netflix Original Movies With Highest IMDB Ratings')"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -769,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "05bb35a9",
    "metadata": {},
    "outputs": [
@@ -779,7 +789,7 @@
        "Text(0.5, 1.0, 'Languages of Netflix Original Movies With Highest IMDB Ratings')"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -808,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "id": "7ad0d7d7",
    "metadata": {},
    "outputs": [
@@ -881,7 +891,7 @@
        "  Text(0, 0, '')])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -905,8 +915,304 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7545e846",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>IMDB Score</th>\n",
+       "      <th>Language_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>English</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Japanese</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Italian</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>English</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>Ukranian</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>Russian</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>581</th>\n",
+       "      <td>English</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>582</th>\n",
+       "      <td>Portuguese</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>English</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>610 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Language  IMDB Score Language_num\n",
+       "0       English         2.5             \n",
+       "0      Japanese         2.5             \n",
+       "1       Spanish         2.6             \n",
+       "2       Italian         2.6             \n",
+       "3       English         3.2             \n",
+       "..          ...         ...          ...\n",
+       "580    Ukranian         8.4             \n",
+       "580     Russian         8.4             \n",
+       "581     English         8.5             \n",
+       "582  Portuguese         8.6             \n",
+       "583     English         9.0             \n",
+       "\n",
+       "[610 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "popular_language = netflix_origs_split[[\"Language\", \"IMDB Score\"]]\n",
+    "languages = popular_language.sort_values(by = \"Language\" )[\"Language\"].unique()\n",
+    "popular_language[\"Language_num\"]=\"\"\n",
+    "popular_language\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "bebc8d9e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Language</th>\n",
+       "      <th>IMDB Score</th>\n",
+       "      <th>Language_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>English</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Spanish</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Italian</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>English</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Hindi</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>579</th>\n",
+       "      <td>English</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>580</th>\n",
+       "      <td>English</td>\n",
+       "      <td>8.4</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>581</th>\n",
+       "      <td>English</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>582</th>\n",
+       "      <td>Portuguese</td>\n",
+       "      <td>8.6</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>583</th>\n",
+       "      <td>English</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>522 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Language  IMDB Score  Language_num\n",
+       "0       English         2.5             1\n",
+       "1       Spanish         2.6             2\n",
+       "2       Italian         2.6             4\n",
+       "3       English         3.2             1\n",
+       "4         Hindi         3.4             3\n",
+       "..          ...         ...           ...\n",
+       "579     English         8.4             1\n",
+       "580     English         8.4             1\n",
+       "581     English         8.5             1\n",
+       "582  Portuguese         8.6             5\n",
+       "583     English         9.0             1\n",
+       "\n",
+       "[522 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#assign numeric values to top 5 most popular languages\n",
+    "popular_language.loc[popular_language['Language'] == \"English\", 'Language_num'] = 1\n",
+    "popular_language.loc[popular_language['Language'] == \"Spanish\", 'Language_num'] = 2\n",
+    "popular_language.loc[popular_language['Language'] == \"Hindi\", 'Language_num'] = 3\n",
+    "popular_language.loc[popular_language['Language'] == \"Italian\", 'Language_num'] = 4\n",
+    "popular_language.loc[popular_language['Language'] == \"Portuguese\", 'Language_num'] = 5\n",
+    "\n",
+    "\n",
+    "popular_language.replace('', 0, inplace = True)\n",
+    "popular_language = popular_language.loc[popular_language[\"Language_num\"] != 0]\n",
+    "popular_language\n",
+    "# type(scorelanguage[\"Language_num\"])\n",
+    "# scorelanguage[\"Language_num\"]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "340936e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "F_onewayResult(statistic=7319.980613606987, pvalue=0.0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stats.f_oneway(popular_language['Language_num'], popular_language['IMDB Score'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58417ee3",
    "metadata": {},
    "outputs": [],
    "source": []
